--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
 /* Your CSS Code here. */
+table,th,tr,td{
+	border:1px solid black;
+	border-collapse:collapse;
+	padding:5px;
+	background-color:darkgray;
+	color:darkgreen;
+}
